Refactored H Solutions to match H Exercises